--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,12 @@ on:
         required: true
         default: 'Manual Trigger'
         type: string
+      check_bool:
+        description: 'pass true or false'
+        required: true
+        default: true
+        type: boolean
+
 
 jobs:
   call-reusable-workflow:
@@ -18,3 +24,4 @@ jobs:
     with:
       name: ${{ github.event_name == 'push' && 'Push Trigger' || github.event.inputs.name }}
       greeting: 'Hello'
+      check_bool: ${{ github.event_name == 'push' && false || github.event.inputs.check_bool }}
