--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,6 @@ jobs:
   call-reusable-workflow:
     uses: ./.github/workflows/greet.yml
     with:
-      name: ${{ github.event_name == 'push' ? 'Push Trigger' : github.event.inputs.name }}
+      name: ${{ github.event_name == 'push' && 'Push Trigger' || github.event.inputs.name }}
       greeting: 'Hello'
-      check_bool: ${{ github.event_name == 'push' ? false : github.event.inputs.check_bool }}
+      check_bool: ${{ github.event_name == 'push' && false || github.event.inputs.check_bool }}
