--- a/.github/workflows/greet.yml
+++ b/.github/workflows/greet.yml
@@ -14,7 +14,7 @@ on:
       check_bool:
         description: 'Boolean to check'
         required: true
-        type: string
+        type: boolean
 
 jobs:
   greet:
