--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
         type: string
       check_bool:
         description: 'Pass true or false'
-        required: true
+        required: false
         default: true
         type: boolean
 
@@ -23,4 +23,4 @@ jobs:
     with:
       name: ${{ github.event_name == 'push' && 'Push Trigger' || github.event.inputs.name }}
       greeting: 'Hello'
-      check_bool: ${{ github.event.inputs.check_bool || false}}
+      check_bool: ${{ github.event.inputs.check_bool && true || false}}
