--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
       check_bool:
         description: 'Pass true or false'
         required: false
-        default: true
+        default: false
         type: boolean
 
 jobs:
