--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
     with:
       name: ${{ github.event_name == 'push' && 'Push Trigger' || github.event.inputs.name }}
       greeting: 'Hello'
-      check_bool: ${{ github.event.inputs.check_bool && true || false}}
+      check_bool:  ${{ github.event.inputs.check_bool == 'true' }}
